Bug 459283 - Erroneous "Unknown subcue ':usagetip' in UI marker in context {@info:usagetip}." error in xi18n() function call
Summary: Erroneous "Unknown subcue ':usagetip' in UI marker in context {@info:usagetip...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ki18n
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Chusslove Illich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-17 14:46 UTC by Nate Graham
Modified: 2022-09-18 21:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.99
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 Bug Janitor Service 2022-09-18 18:32:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ki18n/-/merge_requests/64
Comment 2 Albert Astals Cid 2022-09-18 21:00:37 UTC
Git commit af2fda2ba4ca4b922f6045765a65f44b8fa34410 by Albert Astals Cid, on behalf of Chusslove Illich (Часлав Илић).
Committed on 18/09/2022 at 19:12.
Pushed by aacid into branch 'master'.

Really support :usagetip cue

On switch from kdelibs4 to KF5, the :tipoftheday cue to @info marker
was deprecated in documentation in favor of new :usagetip cue.
However the :usagetip cue was never actually added to the code.
So it is added now.
FIXED-IN: 5.99

M  +4    -2    src/i18n/kuitmarkup.cpp

https://invent.kde.org/frameworks/ki18n/commit/af2fda2ba4ca4b922f6045765a65f44b8fa34410