Really support :usagetip cue

On switch from kdelibs4 to KF5, the :tipoftheday cue to @info marker
was deprecated in documentation in favor of new :usagetip cue.
However the :usagetip cue was never actually added to the code.
So it is added now.

BUG: 459283
FIXED-IN: 5.99